[package]
name = "zhsbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["blocking"] }
html_parser = { version = "0.7.0" }
scraper = "0.20.0"
chrono = "0.4"
timespan = "^0"
lettre = "0.11"
clap = { version = "4.5.15", features = ["derive"] }
